# nail-salon

./: .gitignore  Cargo.toml  README.md  build.sh  demo.js  package-lock.json  package.json  setup_bench_data.sh  test.js  tsconfig.ci.json  tsconfig.json  tsconfig.wasm.json  wasm
.github/workflows/: rust.yml
bench/: bench.ts
lib/: image_worker_pool.ts  index.ts  types.ts  util.ts  worker.ts  worker_basic.ts  worker_pool.ts
src/: errors.rs  giflib.rs  lib.rs  manicure.rs  utils.rs
toy2/: Cargo.toml
toy2/src/: main.rs
