[package]
name = "nail-salon"
description = "Safest place to get your nails done"
version = "0.1.7"
authors = ["Chris Agerton <cagerton@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE-APACHE"
repository = "https://github.com/cagerton/nail-salon"
homepage = "https://github.com/cagerton/nail-salon"

[dependencies]
bytes = "0.5"
kamadak-exif = "0.5"
console_error_panic_hook = "0.1"

js-sys = "0.3"
serde="^1.0"
serde_derive = "^1.0"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.image]
version = "^0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp"]

[dependencies.jpeg-decoder]
version = "0.1.18"
default-features = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
path = "src/manicure.rs"
crate-type = ["cdylib", "rlib"]
