[package]
name = "nail-salon"
description = "Safest place to get your nails done"
version = "0.2.0"
authors = ["Chris Agerton <cagerton@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
license-file = "LICENSE-APACHE"
repository = "https://github.com/cagerton/nail-salon"
homepage = "https://github.com/cagerton/nail-salon"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen="^0.1"
bincode = "^1.3"
serde_derive = "^1.0"
serde_bytes = "^0.11"
kamadak-exif = "^0.5"

[dependencies.image]
version = "^0.23"
default-features = false
features = ["gif", "jpeg", "ico", "png", "tiff", "webp", "bmp"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
